welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  Boolean vuBiscuit=false
  for (i <- 1 to 6){
    avance()
    if (estSurBiscuit()==true)
 {
   vuBiscuit=true
 } }
  for (j <- 1 to 6){
    recule()
  }
  if (vuBiscuit==true){
    return true 
  }
  else {
    return false}
}